--- a/themes/PaperMod/layouts/partials/footer.html
+++ b/themes/PaperMod/layouts/partials/footer.html
@@ -11,14 +11,14 @@
 
     {{- with site.Params.footer.text }}
         {{ . | markdownify }}
-        {{- print " · "}}
+        {{- print ""}}
     {{- end }}
 
-    <span>
-        Powered by
+    <!-- <span>
+        
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
         <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
-    </span>
+    </span> -->
 </footer>
 {{- end }}
 
