--- a/themes/PaperMod/assets/css/extended/blank.css
+++ b/themes/PaperMod/assets/css/extended/blank.css
@@ -3,3 +3,19 @@ This is just a placeholder blank stylesheet so as to support adding custom style
 
 Read https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#bundling-custom-css-with-themes-assets for more info
 */
+.social-icons {
+    display: flex;
+    gap: 1rem;
+    margin-top: 1rem;
+  }
+  
+  .social-icons a {
+    color: inherit;
+    text-decoration: none;
+    font-size: 1.2rem;
+  }
+  
+  .social-icons i {
+    margin-right: 0.5rem;
+  }
+  
